--- a/.github/workflows/readmeStats.yml
+++ b/.github/workflows/readmeStats.yml
@@ -15,3 +15,5 @@ jobs:
       - run: ./aoc
       
       - uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: Update readme statistics
