--- a/.github/workflows/readmeStats.yml
+++ b/.github/workflows/readmeStats.yml
@@ -2,18 +2,15 @@ name: Generate Statistics Tables for Readme
 on: push
 
 jobs:
-  statistics-2022:
+  statistics:
+    name: Benchmark and Update Readme
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    defaults:
-      run:
-        working-directory: ./2022
     steps:
       - uses: actions/checkout@v4
-      - run: go build
-      - run: ./aoc
-      
+      - run: cd 2022 && go build .
+      - run: cd 2022 && aoc2022
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: Update readme statistics
