--- a/.github/workflows/readmeStats.yml
+++ b/.github/workflows/readmeStats.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: cd 2022 && go build .
-      - run: cd 2022 && aoc2022
+      - run: cd 2022 && ./aoc2022
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: Update readme statistics
