--- a/.github/workflows/readmeStats.yml
+++ b/.github/workflows/readmeStats.yml
@@ -11,6 +11,8 @@ jobs:
       - uses: actions/checkout@v4
       - run: cd 2022 && go build .
       - run: cd 2022 && ./aoc2022
+      - run: cd 2023 && go build .
+      - run: cd 2023 && ./aoc2023
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: Update readme statistics
