--- a/.github/workflows/readmeStats.yml
+++ b/.github/workflows/readmeStats.yml
@@ -2,17 +2,20 @@ name: Generate Statistics Tables for Readme
 on: push
 
 jobs:
-  statistics:
-    name: Benchmark and Update Readme
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - uses: actions/checkout@v4
-      - run: cd 2022 && go build .
-      - run: cd 2022 && ./aoc2022 -benchmark
-      - run: cd 2023 && go build .
-      - run: cd 2023 && ./aoc2023 -benchmark
-      - uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: Update readme statistics
+    statistics:
+        name: Benchmark and Update Readme
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: laytan/setup-odin@v2
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
+
+            - run: cd 2021 && odin run . -- -benchmark
+            - run: cd 2022 && go build .
+            - run: cd 2022 && ./aoc2022 -benchmark
+            - run: cd 2023 && go build .
+            - run: cd 2023 && ./aoc2023 -benchmark
+            - uses: stefanzweifel/git-auto-commit-action@v5
+              with:
+                  commit_message: Update readme statistics
