add build step for odin solutions

--- a/.github/workflows/readmeStats.yml
+++ b/.github/workflows/readmeStats.yml
@@ -11,7 +11,8 @@ jobs:
               with:
                   token: ${{ secrets.GITHUB_TOKEN }}
 
-            - run: cd 2021 && odin run . -- -benchmark
+            - run: cd 2021 && odin build .
+            - run: cd 2021 && ./2021 -benchmark
             - run: cd 2022 && go build .
             - run: cd 2022 && ./aoc2022 -benchmark
             - run: cd 2023 && go build .
