--- a/2021/makefile
+++ b/2021/makefile
@@ -1,9 +1,21 @@
+ifeq ($(OS),Windows_NT)
+    RM = del
+    CP = xcopy /y > NUL
+    PS = \\
+    EXE = .exe
+else
+    RM = rm
+    CP = cp
+    PS = /
+    EXE =
+endif
+
 test:
-	cp ./tests/*.odin . # keeps tests in seperate directory
-	odin test . -vet -strict-style -out:test_build
-	rm *_test.odin
-	rm test_build
+	$(CP) .$(PS)tests$(PS)*.odin .
+	odin test . -vet -strict-style -out:test_build$(EXE)
+	$(RM) *_test.odin
+	$(RM) test_build$(EXE)
 
 bench:
-	odin run .  -out:2021 -- -benchmark
-	rm 2021
+	odin run . -out:2021$(EXE) -- -benchmark
+	$(RM) 2021$(EXE)
