--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,9 +12,13 @@ jobs:
               with:
                   token: ${{ secrets.GITHUB_TOKEN }}
             - name: Report
-              run: odin report ./2021
+              run: |
+                  odin report ./2021
+                  odin report ./2024
             - name: Test
-              run: cd 2021 && task
+              run: |
+                  cd 2021 && task
+                  cd ../2024 && task
 
     statistics:
         needs: test
@@ -32,6 +36,7 @@ jobs:
             - run: cd 2022 && ./aoc2022 -benchmark
             - run: cd 2023 && go build .
             - run: cd 2023 && ./aoc2023 -benchmark
+            - run: cd 2024 && task bench
             - uses: stefanzweifel/git-auto-commit-action@v5
               with:
                   commit_message: Update readme statistics
