add watch config to taskfile for better testing QoL

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,7 +18,7 @@ jobs:
             - name: Test
               run: |
                   cd 2021 && task
-                  cd ../2024 && task
+                  cd ../2024 && task test
 
     statistics:
         needs: test
