and final solution for day3 pt2

--- a/2024/taskfile.yaml
+++ b/2024/taskfile.yaml
@@ -15,6 +15,7 @@ tasks:
             - cmd: clear
             - cmd: "{{.CU}}cp ./tests/*.odin ."
               silent: true
+            - defer: { task: clean }
             - cmd: odin test . -vet -strict-style
 
     test:
