--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,6 +15,7 @@ jobs:
             - uses: laytan/setup-odin@v2
               with:
                   token: ${{ secrets.GITHUB_TOKEN }}
+                  release: dev-2024-11
             - name: Report
               run: |
                   odin report ./2021
@@ -34,6 +35,7 @@ jobs:
             - uses: laytan/setup-odin@v2
               with:
                   token: ${{ secrets.GITHUB_TOKEN }}
+                  release: dev-2024-11
 
             - run: cd 2021 && task bench
             - run: cd 2022 && go build .
